Fixing issue on mobile when desktop view is used.

--- a/portfolio/src/Projects/Project.css
+++ b/portfolio/src/Projects/Project.css
@@ -6,6 +6,7 @@
     max-width: 30rem;
     max-height: 30rem;
     margin-bottom: 1.2rem;
+    overflow: hidden;
 }
 
 .projImg {
